haskell/Guestfs.hs


inspect_get_arch :: GuestfsH -> String -> IO String
inspect_get_arch h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_arch p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_distro" c_inspect_get_distro
  :: GuestfsP -> CString -> IO CString

inspect_get_distro :: GuestfsH -> String -> IO String
inspect_get_distro h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_distro p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_drive_mappings" c_inspect_get_drive_mappings
  :: GuestfsP -> CString -> IO (Ptr CString)

inspect_get_drive_mappings :: GuestfsH -> String -> IO [(String, String)]
inspect_get_drive_mappings h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_drive_mappings p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else do
      arr <- peekArray0 nullPtr r
      arr <- mapM peekCString arr
      return (assocListOfHashtable arr)

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_filesystems" c_inspect_get_filesystems
  :: GuestfsP -> CString -> IO (Ptr CString)

inspect_get_filesystems :: GuestfsH -> String -> IO [String]
inspect_get_filesystems h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_filesystems p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_format" c_inspect_get_format
  :: GuestfsP -> CString -> IO CString

inspect_get_format :: GuestfsH -> String -> IO String
inspect_get_format h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_format p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_hostname" c_inspect_get_hostname
  :: GuestfsP -> CString -> IO CString

inspect_get_hostname :: GuestfsH -> String -> IO String
inspect_get_hostname h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_hostname p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_major_version" c_inspect_get_major_version
  :: GuestfsP -> CString -> IO CInt

inspect_get_major_version :: GuestfsH -> String -> IO Int
inspect_get_major_version h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_major_version p root)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_minor_version" c_inspect_get_minor_version
  :: GuestfsP -> CString -> IO CInt

inspect_get_minor_version :: GuestfsH -> String -> IO Int
inspect_get_minor_version h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_minor_version p root)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_mountpoints" c_inspect_get_mountpoints
  :: GuestfsP -> CString -> IO (Ptr CString)

inspect_get_mountpoints :: GuestfsH -> String -> IO [(String, String)]
inspect_get_mountpoints h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_mountpoints p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else do
      arr <- peekArray0 nullPtr r
      arr <- mapM peekCString arr
      return (assocListOfHashtable arr)

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_package_format" c_inspect_get_package_format
  :: GuestfsP -> CString -> IO CString

inspect_get_package_format :: GuestfsH -> String -> IO String
inspect_get_package_format h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_package_format p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_package_management" c_inspect_get_package_management
  :: GuestfsP -> CString -> IO CString

inspect_get_package_management :: GuestfsH -> String -> IO String
inspect_get_package_management h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_package_management p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_product_name" c_inspect_get_product_name
  :: GuestfsP -> CString -> IO CString

inspect_get_product_name :: GuestfsH -> String -> IO String
inspect_get_product_name h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_product_name p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_product_variant" c_inspect_get_product_variant
  :: GuestfsP -> CString -> IO CString

inspect_get_product_variant :: GuestfsH -> String -> IO String
inspect_get_product_variant h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_product_variant p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_roots" c_inspect_get_roots
  :: GuestfsP -> IO (Ptr CString)

inspect_get_roots :: GuestfsH -> IO [String]
inspect_get_roots h = do
  r <- withForeignPtr h (\p -> c_inspect_get_roots p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_type" c_inspect_get_type
  :: GuestfsP -> CString -> IO CString

inspect_get_type :: GuestfsH -> String -> IO String
inspect_get_type h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_type p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_windows_current_control_set" c_inspect_get_windows_current_control_set
  :: GuestfsP -> CString -> IO CString

inspect_get_windows_current_control_set :: GuestfsH -> String -> IO String
inspect_get_windows_current_control_set h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_windows_current_control_set p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_windows_systemroot" c_inspect_get_windows_systemroot
  :: GuestfsP -> CString -> IO CString

inspect_get_windows_systemroot :: GuestfsH -> String -> IO String
inspect_get_windows_systemroot h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_get_windows_systemroot p root)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_inspect_is_live" c_inspect_is_live
  :: GuestfsP -> CString -> IO CInt

inspect_is_live :: GuestfsH -> String -> IO Bool
inspect_is_live h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_is_live p root)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_inspect_is_multipart" c_inspect_is_multipart
  :: GuestfsP -> CString -> IO CInt

inspect_is_multipart :: GuestfsH -> String -> IO Bool
inspect_is_multipart h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_is_multipart p root)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_inspect_is_netinst" c_inspect_is_netinst
  :: GuestfsP -> CString -> IO CInt

inspect_is_netinst :: GuestfsH -> String -> IO Bool
inspect_is_netinst h root = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_inspect_is_netinst p root)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_inspect_os" c_inspect_os
  :: GuestfsP -> IO (Ptr CString)

inspect_os :: GuestfsH -> IO [String]
inspect_os h = do
  r <- withForeignPtr h (\p -> c_inspect_os p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_internal_exit" c_internal_exit
  :: GuestfsP -> IO CInt

internal_exit :: GuestfsH -> IO ()
internal_exit h = do
  r <- withForeignPtr h (\p -> c_internal_exit p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_internal_test_close_output" c_internal_test_close_output
  :: GuestfsP -> IO CInt

internal_test_close_output :: GuestfsH -> IO ()
internal_test_close_output h = do
  r <- withForeignPtr h (\p -> c_internal_test_close_output p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_internal_test_rbool" c_internal_test_rbool
  :: GuestfsP -> CString -> IO CInt

internal_test_rbool :: GuestfsH -> String -> IO Bool
internal_test_rbool h val = do
  r <- withCString val $ \val -> withForeignPtr h (\p -> c_internal_test_rbool p val)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_internal_test_rboolerr" c_internal_test_rboolerr
  :: GuestfsP -> IO CInt

internal_test_rboolerr :: GuestfsH -> IO Bool
internal_test_rboolerr h = do
  r <- withForeignPtr h (\p -> c_internal_test_rboolerr p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_internal_test_rconststring" c_internal_test_rconststring
  :: GuestfsP -> CString -> IO CString

internal_test_rconststring :: GuestfsH -> String -> IO String
internal_test_rconststring h val = do
  r <- withCString val $ \val -> withForeignPtr h (\p -> c_internal_test_rconststring p val)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_internal_test_rconststringerr" c_internal_test_rconststringerr
  :: GuestfsP -> IO CString

internal_test_rconststringerr :: GuestfsH -> IO String
internal_test_rconststringerr h = do
  r <- withForeignPtr h (\p -> c_internal_test_rconststringerr p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_internal_test_rhashtable" c_internal_test_rhashtable
  :: GuestfsP -> CString -> IO (Ptr CString)

internal_test_rhashtable :: GuestfsH -> String -> IO [(String, String)]
internal_test_rhashtable h val = do
  r <- withCString val $ \val -> withForeignPtr h (\p -> c_internal_test_rhashtable p val)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else do
      arr <- peekArray0 nullPtr r
      arr <- mapM peekCString arr
      return (assocListOfHashtable arr)

foreign import ccall unsafe "guestfs.h guestfs_internal_test_rhashtableerr" c_internal_test_rhashtableerr
  :: GuestfsP -> IO (Ptr CString)
